<resources>
    <string name="app_name">RxBus</string>
    <string name="post_without_tag">Post Without Tag</string>
    <string name="post_with_tag">Post With Tag</string>
    <string name="post_sticky_without_tag">Post Sticky Without Tag</string>
    <string name="post_sticky_with_tag">Post Sticky With Tag</string>
    <string name="use_manager">Use Manager</string>
    <string name="test_interface">Test Interface</string>
</resources>